[package]
name = "grazie"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[dependencies.tokio]
version = "1.44.1"
features = ["net", "rt", "macros", "io-util"]

[dependencies.hyper]
version = "1.6.0"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0.140"
optional = true

[dependencies.serde-xml-rs]
version = "0.6.0"
optional = true

[features]
#http2 = ["hyper/http2"]
serde = ["dep:serde"]
serde_all = ["serde", "serde_json", "serde_xml"]
serde_json = ["serde", "dep:serde_json"]
serde_xml = ["serde", "dep:serde-xml-rs"]
